Sistema multiusuario con aislamiento por user_id
Cada usuario tiene su propia cartera: operaciones, lotes FIFO, ventas y
splits son independientes. El FIFO sigue siendo global por ticker, pero
dentro de cada usuario.

- AppUser + Role y autenticación JPA (AppUserDetailsService) en lugar del
  InMemoryUserDetailsManager. AppUserPrincipal transporta el id para no
  consultar la BD en cada petición.
- Columna user_id en operations, fifo_lots, sale_records y splits. Es
  nullable a nivel de DDL a propósito: SQLite rechaza ALTER TABLE ADD
  COLUMN NOT NULL sin default, así que declararla obligatoria rompería el
  arranque con ddl-auto=update sobre una BD con datos. La obligatoriedad
  se garantiza en código y la verifican los tests.
- LegacyDataMigration: siembra el primer admin desde application.properties
  y adopta las filas sin propietario. Idempotente.
- Todas las consultas filtran por usuario: se eliminan los 8 findAll() y se
  cierran los 4 findById() sin comprobación de propietario (IDOR).
- Los servicios reciben userId como parámetro en vez de leerlo del
  SecurityContext, para poder conducir a dos usuarios desde los tests.
- Administración de usuarios en /admin/users, restringida al rol ADMIN.
- app.security.username/password pasa a ser solo semilla del primer admin.

MultiUserIsolationTest cubre el caso crítico: dos usuarios operando sobre
el mismo ticker con fechas entrelazadas, de forma que una fuga en el FIFO
cambia el coste de adquisición y no puede pasar desapercibida. Verificado
rompiendo el aislamiento a propósito. ReplayConsistencyTest sigue
reproduciendo la BD de referencia sin cambios.

Se eliminan cuatro métodos de repositorio sin uso.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01AuABty2Cp6wfWHSjVW3gMN